[project]
name = "1337"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "pytest-timeout>=2.3.1",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"

[tool.pyright]
allowedUntypedLibraries = ["icecream"]
